Feat: Get a stack's docker-compose
